fix-contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -234,3 +234,23 @@ input:focus-visible {
     color: var(--dark-blue);
     background-color: white;
 }
+
+.tag.is-danger {
+  background-color: #B30024 !important;
+}
+
+.help.is-danger {
+  color: #B30024 !important;
+}
+
+.button.is-primary, .tag.is-primary {
+  background-color: rgb(0, 122, 122) !important;
+}
+
+.tag.is-success {
+  color: black !important;
+}
+
+.help.is-success {
+  color: #017028 !important;
+}
